fix mhos card hover z-index and card responsive grid mobile for homepage MT

--- a/house-of-science/ui.frontend/src/main/webpack/components/_card-hover.scss
+++ b/house-of-science/ui.frontend/src/main/webpack/components/_card-hover.scss
@@ -25,7 +25,7 @@
             flex-direction: column;
             align-items: center;
             color: $white;
-            z-index: 100;
+            z-index: 9;
 
             .cmp-teaser__title {
                 text-transform: uppercase;
